# TohfaHub_project

./: .gitignore
craftnest-backend/: .env.example  .gitignore  README.md  cleanup_migration.py  craftnest.db.bak  implementation_plan.md  pyproject.toml  requirements.txt  run.py  run_dev.ps1  run_dev.sh  temp_restore.dump  test_collection_err.txt  test_collection_err_utf8.txt
craftnest-backend/alembic/: .gitkeep  env.py
craftnest-backend/app/: __init__.py  main.py  metrics_custom.py
craftnest-backend/frontend/: 1_categories_botanical_artisanship.html  2_reels_botanical_artisanship.html  3_buyer_profile_botanical_palette.html  4_seller_profile_botanical_palette_update.html  5_seller_profile_refined_upload_flow.html  6_home_ribbed_ribbon_tags_endless_scroll.html  category.html  home.html  index.html  login.html  order-detail.html  orders-detail.html  orders.html  product.html  profile.html  reels.html  seller-dashboard.html  seller-orders.html  signup-buyer.html  signup-seller.html  wishlist.html
craftnest-backend/scripts/: README_scheduler.txt  backup_cloud.ps1  backup_local.ps1  check_response_secrets.py  create_tables.py  integrity_check.py  list_products.py  recompute_ratings.py  restore_drill.ps1  verify_flow.py
craftnest-backend/tests/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_auth_fixtures.py  test_browse.py  test_cors.py  test_items.py  test_notifications.py  test_orders.py  test_products.py  test_rate_limit.py  test_reels.py  test_reviews.py  test_security_hardening.py  test_seller_onboard.py  test_seller_studio.py  test_startup.py  (+2 more)
(+79 files in other folders)
