[project]
name = "craftnest-backend"
version = "0.1.0"
description = "Backend API for CraftNest marketplace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "python-jose[cryptography]",
    "pyjwt",
    "passlib[argon2]",
    "argon2-cffi",
    "python-multipart",
    "email-validator",
    "slowapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
